[tool.poetry]
name = "archery"
version = "v1.11.1"
description = "SQL 审核查询平台"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.13"
mysqlclient = "^2.2.4"
requests = "2.31.0"
simplejson = "3.17.2"
mybatis-mapper2sql = "0.1.9"
django-auth-ldap = "4.1.0"
python-dateutil = "2.8.1"
pymongo = "4.6.3"
psycopg2-binary = "^2.9.9"
pymysql = "0.9.3"
mysql-replication = "0.22"
django-q = "1.3.9"
django-redis = "5.2.0"
redis = "3.5.3"
pyodbc = "^4"
gunicorn = "22.0.0"
pyecharts = "2.0.4"
aliyun-python-sdk-rds = "2.1.1"
cx-oracle = "7.3.0"
supervisor = "4.1.0"
phoenixdb = "1.2.1"
django-mirage-field = "1.4.0"
schema-sync = "0.9.7"
parsedatetime = "2.4"
sshtunnel = "0.1.5"
pycryptodome = "3.19.1"
pyodps = "^0.11.6"
pandas = "^1.5"
clickhouse-driver = "^0.2.7"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.2.0"
django-filter = "21.1"
drf-spectacular = "0.22.0"
pyotp = "2.6.0"
pillow = "10.3.0"
qrcode = "7.3.1"
django-environ = "0.8.1"
alibabacloud-dysmsapi20170525 = "2.0.9"
tencentcloud-sdk-python = "3.0.656"
mozilla-django-oidc = "3.0.0"
django-auth-dingding = "0.0.3"
django-cas-ng = "4.3.0"
cassandra-driver = "^3.29.1"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "archery.settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.coverage.run]
source = [
    "."
]
omit = [
    # omit anything in a .local directory anywhere
    "src*",
    # omit everything in /usr
    "downloads*",
    # omit this single file
    "sql/migrations/*",
    "venv*"
]

[tool.coverage.report]
omit = [
    # omit anything in a .local directory anywhere
    "src*",
    # omit everything in /usr
    "downloads*",
    # omit this single file
    "sql/migrations/*",
    "venv*"
]